--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sungwookFrontEndCollection/webpack_getting_start#readme",
   "dependencies": {
+    "lodash": "^4.17.20",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0"
   }
