--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/sungwookFrontEndCollection/webpack_getting_start#readme",
   "dependencies": {
+    "extract-loader": "^5.1.0",
+    "html-loader": "^1.3.2",
     "lodash": "^4.17.20",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^4.5.0"
   }
 }
