--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "html-loader": "^1.3.2",
     "lodash": "^4.17.20",
     "webpack": "^5.1.3",
-    "webpack-cli": "^4.1.0"
+    "webpack-cli": "^4.1.0",
+    "xterm": "^4.9.0"
   },
   "devDependencies": {
     "html-webpack-plugin": "^4.5.0"
