--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "xterm": "^4.9.0"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^4.5.0"
+    "css-loader": "^5.0.0",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.1.2",
+    "style-loader": "^2.0.0"
   }
 }
