--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "extract-loader": "^5.1.0",
     "html-loader": "^1.3.2",
     "lodash": "^4.17.20",
+    "node-pty": "^0.9.0",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0",
-    "xterm": "^4.9.0"
+    "xterm": "^4.9.0",
+    "xterm-addon-attach": "^0.6.0"
   },
   "devDependencies": {
     "css-loader": "^5.0.0",
